--- a/app/src/main/res/layout/recycler_file_manager_item.xml
+++ b/app/src/main/res/layout/recycler_file_manager_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/llMain"
+<LinearLayout android:id="@+id/llMain"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    xmlns:tools="http://schemas.android.com/tools">
     <android.support.v7.widget.CardView
         android:id="@+id/cvItem"
         android:layout_width="match_parent"
@@ -19,10 +19,17 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
             <ImageView
+                android:id="@+id/ivFavorite"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_margin="2dp"
+                android:tint="@color/white"
+                android:src="@drawable/ic_star" />
+            <ImageView
                 android:id="@+id/ivImage"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="10dp"
                 android:layout_width="40dp"
+                tools:src="@drawable/ic_folder"
                 android:layout_height="40dp"/>
             <TextView
                 android:id="@+id/tvName"
