--- a/app/src/main/res/layout/fragment_file_manager.xml
+++ b/app/src/main/res/layout/fragment_file_manager.xml
@@ -6,30 +6,42 @@
     android:background="@color/blue_grey_400"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvDirectories"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/recycler_directory_item">
-        </android.support.v7.widget.RecyclerView>
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvFiles"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/recycler_directory_item">
-        </android.support.v7.widget.RecyclerView>
-        <TextView
+            android:orientation="vertical">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvDirectories"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/recycler_directory_item">
+            </android.support.v7.widget.RecyclerView>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvFiles"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/recycler_directory_item">
+            </android.support.v7.widget.RecyclerView>
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/tvEmptyFolder"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:layout_height="match_parent"
+                android:text="Empty folder"/>
+        </LinearLayout>
+        <taras.clientwebsocketapp.custom_views.SelectedFileView
+            android:id="@+id/selectedFileView"
             android:visibility="gone"
-            android:id="@+id/tvEmptyFolder"
-            android:layout_width="match_parent"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:layout_height="match_parent"
-            android:text="Empty folder"/>
-    </LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_height="60dp">
+        </taras.clientwebsocketapp.custom_views.SelectedFileView>
+    </RelativeLayout>
 
 </LinearLayout>
