--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,10 +9,21 @@
     tools:context="taras.clientwebsocketapp.screens.MainActivity"
     tools:showIn="@layout/app_bar_main"
     android:orientation="vertical">
-    <FrameLayout
-        android:id="@+id/content_layout"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-    </FrameLayout>
+        <FrameLayout
+            android:id="@+id/content_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </FrameLayout>
+        <taras.clientwebsocketapp.custom_views.SelectedFileView
+            android:id="@+id/selectedFileView"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_height="60dp">
+        </taras.clientwebsocketapp.custom_views.SelectedFileView>
+    </RelativeLayout>
 </LinearLayout>
