--- a/app/src/main/res/layout/dialog_scanning_for_sending.xml
+++ b/app/src/main/res/layout/dialog_scanning_for_sending.xml
@@ -13,38 +13,48 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         app:cardBackgroundColor="@color/blue_grey_200"
+        app:cardCornerRadius="5dp"
         app:cardElevation="3dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <FrameLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="35dp">
-                <TextView
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/blue_grey_400"
+                app:cardElevation="2dp">
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_horizontal"
-                    android:text="@string/devices"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:textSize="20sp" />
-                <ImageView
-                    android:id="@+id/ivRefresh"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_margin="5dp"
-                    android:layout_gravity="center_vertical|end"
-                    android:tint="@color/white"
-                    android:src="@drawable/ic_refresh"/>
-            </FrameLayout>
-
+                    android:layout_height="35dp">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center_horizontal"
+                        android:text="@string/devices"
+                        android:textColor="@color/white"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:textSize="20sp" />
+                    <ImageView
+                        android:id="@+id/ivRefresh"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_margin="5dp"
+                        android:clickable="true"
+                        android:layout_gravity="center_vertical|end"
+                        android:tint="@color/white"
+                        android:src="@drawable/ic_refresh" />
+                </FrameLayout>
+            </android.support.v7.widget.CardView>
+            <!--
+            android:background="@drawable/click_refrech_btn"
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/white"
                 android:layout_marginBottom="5dp"/>
+                -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="210dp"
