--- a/app/src/main/res/layout/recycler_device_item.xml
+++ b/app/src/main/res/layout/recycler_device_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal">
@@ -19,12 +19,11 @@
             <ImageView
                 android:id="@+id/ivImage"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="10dp"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/ic_launcher_background"/>
             <LinearLayout
-                android:layout_margin="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -34,6 +33,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
+                    android:layout_marginTop="5dp"
                     android:textSize="18sp"
                     android:textColor="@color/white"
                     android:text="Android"/>
@@ -42,6 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:layout_marginBottom="5dp"
                     android:gravity="start|bottom"
                     android:textSize="12sp"
                     android:textColor="@color/white"
