--- a/app/src/main/res/layout/dialog_check_permission.xml
+++ b/app/src/main/res/layout/dialog_check_permission.xml
@@ -94,7 +94,7 @@
                     android:layout_marginBottom="5dp"
                     android:layout_height="wrap_content">
                 </android.support.v7.widget.RecyclerView>
-                <View
+                <!--<View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/white"/>
@@ -107,7 +107,7 @@
                     android:gravity="center_horizontal"
                     android:text="10"
                     android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:textSize="20sp" />-->
             </LinearLayout>
             <ProgressBar
                 android:id="@+id/pbTimeout"
