--- a/app/src/main/res/layout/recycler_file_to_send_item.xml
+++ b/app/src/main/res/layout/recycler_file_to_send_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tvFileName"
         tools:text="sfsdfsdfsdfsdf"
         android:textColor="@color/white"
-        android:gravity="center"
+        android:gravity="start"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 </LinearLayout>
