--- a/app/src/main/res/layout/recycler_directory_header.xml
+++ b/app/src/main/res/layout/recycler_directory_header.xml
@@ -20,6 +20,8 @@
             android:layout_width="30dp"
             android:tint="@color/white"
             android:layout_height="30dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
             tools:src="@drawable/ic_mobile_phone"/>
         <ImageView
             android:id="@+id/ivSubIcon"
