--- a/app/src/main/res/layout/recycler_directory_item.xml
+++ b/app/src/main/res/layout/recycler_directory_item.xml
@@ -8,6 +8,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginBottom="5dp"
+        android:layout_marginEnd="1dp"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         app:cardBackgroundColor="@color/blue_grey_500"
@@ -20,12 +21,5 @@
             android:layout_height="match_parent"
             android:textColor="@color/white"
             android:text=""/>
-        <ImageView
-            android:id="@+id/ivImage"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_width="30dp"
-            android:tint="@color/white"
-            android:layout_height="30dp" />
     </android.support.v7.widget.CardView>
 </LinearLayout>
